letter spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5em;
-  letter-spacing: 0.03em;
+  
 }
 
 img {
